Updated filter for table.

--- a/IMDB Movies database.ipynb
+++ b/IMDB Movies database.ipynb
@@ -488,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5f/y13jb9491kgdgn16m3t57fq80000gn/T/ipykernel_1465/3788245724.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/5f/y13jb9491kgdgn16m3t57fq80000gn/T/ipykernel_2661/3788245724.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1688,6 +1688,18 @@
        "      <td>Documentary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>34803</th>\n",
+       "      <td>tt0035423</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Kate &amp; Leopold</td>\n",
+       "      <td>Kate &amp; Leopold</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>118</td>\n",
+       "      <td>Comedy,Fantasy,Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>61116</th>\n",
        "      <td>tt0062336</td>\n",
        "      <td>movie</td>\n",
@@ -1700,40 +1712,28 @@
        "      <td>Drama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76059</th>\n",
-       "      <td>tt0077684</td>\n",
+       "      <th>67669</th>\n",
+       "      <td>tt0069049</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Histórias de Combóios em Portugal</td>\n",
-       "      <td>Histórias de Combóios em Portugal</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
        "      <td>0</td>\n",
-       "      <td>2022.0</td>\n",
+       "      <td>2018.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>46</td>\n",
-       "      <td>Documentary</td>\n",
+       "      <td>122</td>\n",
+       "      <td>Drama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>102656</th>\n",
-       "      <td>tt0104988</td>\n",
+       "      <th>77964</th>\n",
+       "      <td>tt0079644</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Neues in Wittstock</td>\n",
-       "      <td>Neues in Wittstock</td>\n",
+       "      <td>November 1828</td>\n",
+       "      <td>November 1828</td>\n",
        "      <td>0</td>\n",
-       "      <td>2021.0</td>\n",
+       "      <td>2001.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Documentary</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106668</th>\n",
-       "      <td>tt0109128</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Washed Ashore</td>\n",
-       "      <td>Angeschwemmt</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>86</td>\n",
-       "      <td>Documentary</td>\n",
+       "      <td>140</td>\n",
+       "      <td>Drama,War</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1748,54 +1748,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9805090</th>\n",
-       "      <td>tt9914192</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>No Gogó do Paulinho</td>\n",
-       "      <td>No Gogó do Paulinho</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>98</td>\n",
-       "      <td>Comedy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9805450</th>\n",
-       "      <td>tt9914972</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Blind Ambition</td>\n",
-       "      <td>Blind Ambition</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>96</td>\n",
-       "      <td>Documentary</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9805979</th>\n",
-       "      <td>tt9916190</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Safeguard</td>\n",
-       "      <td>Safeguard</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>95</td>\n",
-       "      <td>Action,Adventure,Thriller</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9806018</th>\n",
-       "      <td>tt9916270</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Il talento del calabrone</td>\n",
-       "      <td>Il talento del calabrone</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84</td>\n",
-       "      <td>Thriller</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>9806063</th>\n",
        "      <td>tt9916362</td>\n",
        "      <td>movie</td>\n",
@@ -1807,65 +1759,113 @@
        "      <td>92</td>\n",
        "      <td>Drama,History</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9806147</th>\n",
+       "      <td>tt9916538</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Kuambil Lagi Hatiku</td>\n",
+       "      <td>Kuambil Lagi Hatiku</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>123</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9806188</th>\n",
+       "      <td>tt9916622</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
+       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9806215</th>\n",
+       "      <td>tt9916680</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>De la ilusión al desconcierto: cine colombiano...</td>\n",
+       "      <td>De la ilusión al desconcierto: cine colombiano...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9806247</th>\n",
+       "      <td>tt9916754</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Chico Albuquerque - Revelações</td>\n",
+       "      <td>Chico Albuquerque - Revelações</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>40936 rows × 9 columns</p>\n",
+       "<p>210349 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            tconst titleType  \\\n",
        "13082    tt0013274     movie   \n",
+       "34803    tt0035423     movie   \n",
        "61116    tt0062336     movie   \n",
-       "76059    tt0077684     movie   \n",
-       "102656   tt0104988     movie   \n",
-       "106668   tt0109128     movie   \n",
+       "67669    tt0069049     movie   \n",
+       "77964    tt0079644     movie   \n",
        "...            ...       ...   \n",
-       "9805090  tt9914192     movie   \n",
-       "9805450  tt9914972     movie   \n",
-       "9805979  tt9916190     movie   \n",
-       "9806018  tt9916270     movie   \n",
        "9806063  tt9916362     movie   \n",
+       "9806147  tt9916538     movie   \n",
+       "9806188  tt9916622     movie   \n",
+       "9806215  tt9916680     movie   \n",
+       "9806247  tt9916754     movie   \n",
        "\n",
        "                                              primaryTitle  \\\n",
        "13082                          Istoriya grazhdanskoy voyny   \n",
+       "34803                                       Kate & Leopold   \n",
        "61116    The Tango of the Widower and Its Distorting Mi...   \n",
-       "76059                    Histórias de Combóios em Portugal   \n",
-       "102656                                  Neues in Wittstock   \n",
-       "106668                                       Washed Ashore   \n",
+       "67669                           The Other Side of the Wind   \n",
+       "77964                                        November 1828   \n",
        "...                                                    ...   \n",
-       "9805090                                No Gogó do Paulinho   \n",
-       "9805450                                     Blind Ambition   \n",
-       "9805979                                          Safeguard   \n",
-       "9806018                           Il talento del calabrone   \n",
        "9806063                                              Coven   \n",
+       "9806147                                Kuambil Lagi Hatiku   \n",
+       "9806188        Rodolpho Teóphilo - O Legado de um Pioneiro   \n",
+       "9806215  De la ilusión al desconcierto: cine colombiano...   \n",
+       "9806247                     Chico Albuquerque - Revelações   \n",
        "\n",
-       "                                     originalTitle isAdult  startYear endYear  \\\n",
-       "13082                  Istoriya grazhdanskoy voyny       0     2021.0     NaN   \n",
-       "61116    El tango del viudo y su espejo deformante       0     2020.0     NaN   \n",
-       "76059            Histórias de Combóios em Portugal       0     2022.0     NaN   \n",
-       "102656                          Neues in Wittstock       0     2021.0     NaN   \n",
-       "106668                                Angeschwemmt       0     2023.0     NaN   \n",
-       "...                                            ...     ...        ...     ...   \n",
-       "9805090                        No Gogó do Paulinho       0     2020.0     NaN   \n",
-       "9805450                             Blind Ambition       0     2021.0     NaN   \n",
-       "9805979                                  Safeguard       0     2020.0     NaN   \n",
-       "9806018                   Il talento del calabrone       0     2020.0     NaN   \n",
-       "9806063                                   Akelarre       0     2020.0     NaN   \n",
+       "                                             originalTitle isAdult  startYear  \\\n",
+       "13082                          Istoriya grazhdanskoy voyny       0     2021.0   \n",
+       "34803                                       Kate & Leopold       0     2001.0   \n",
+       "61116            El tango del viudo y su espejo deformante       0     2020.0   \n",
+       "67669                           The Other Side of the Wind       0     2018.0   \n",
+       "77964                                        November 1828       0     2001.0   \n",
+       "...                                                    ...     ...        ...   \n",
+       "9806063                                           Akelarre       0     2020.0   \n",
+       "9806147                                Kuambil Lagi Hatiku       0     2019.0   \n",
+       "9806188        Rodolpho Teóphilo - O Legado de um Pioneiro       0     2015.0   \n",
+       "9806215  De la ilusión al desconcierto: cine colombiano...       0     2007.0   \n",
+       "9806247                     Chico Albuquerque - Revelações       0     2013.0   \n",
        "\n",
-       "        runtimeMinutes                     genres  \n",
-       "13082               94                Documentary  \n",
-       "61116               70                      Drama  \n",
-       "76059               46                Documentary  \n",
-       "102656             100                Documentary  \n",
-       "106668              86                Documentary  \n",
-       "...                ...                        ...  \n",
-       "9805090             98                     Comedy  \n",
-       "9805450             96                Documentary  \n",
-       "9805979             95  Action,Adventure,Thriller  \n",
-       "9806018             84                   Thriller  \n",
-       "9806063             92              Drama,History  \n",
+       "        endYear runtimeMinutes                  genres  \n",
+       "13082       NaN             94             Documentary  \n",
+       "34803       NaN            118  Comedy,Fantasy,Romance  \n",
+       "61116       NaN             70                   Drama  \n",
+       "67669       NaN            122                   Drama  \n",
+       "77964       NaN            140               Drama,War  \n",
+       "...         ...            ...                     ...  \n",
+       "9806063     NaN             92           Drama,History  \n",
+       "9806147     NaN            123                   Drama  \n",
+       "9806188     NaN             57             Documentary  \n",
+       "9806215     NaN            100             Documentary  \n",
+       "9806247     NaN             49             Documentary  \n",
        "\n",
-       "[40936 rows x 9 columns]"
+       "[210349 rows x 9 columns]"
       ]
      },
      "execution_count": 27,
@@ -1875,7 +1875,7 @@
    ],
    "source": [
     "#Resource- https://stackoverflow.com/questions/29370057/select-dataframe-rows-between-two-dates\n",
-    "basics = basics[(basics['startYear'] >= 2020) & (basics['startYear'] <= 2023)]\n",
+    "basics = basics[(basics['startYear'] >= 2000) & (basics['startYear'] <= 2021)]\n",
     "basics"
    ]
   },
@@ -1896,18 +1896,18 @@
     {
      "data": {
       "text/plain": [
-       "Documentary                 10801\n",
-       "Drama                        6998\n",
-       "Comedy                       2471\n",
-       "Horror                       1446\n",
-       "Thriller                     1063\n",
+       "Documentary                 49978\n",
+       "Drama                       33767\n",
+       "Comedy                      12603\n",
+       "Comedy,Drama                 6125\n",
+       "Horror                       5332\n",
        "                            ...  \n",
-       "Action,Family,Thriller          1\n",
-       "Documentary,Mystery,News        1\n",
-       "Action,Family,Romance           1\n",
-       "Animation,History,War           1\n",
-       "Crime,Fantasy,Sci-Fi            1\n",
-       "Name: genres, Length: 752, dtype: int64"
+       "Biography,Drama,News            1\n",
+       "History,Mystery                 1\n",
+       "Music,Reality-TV                1\n",
+       "Biography,Family,Musical        1\n",
+       "Action,Crime,Short              1\n",
+       "Name: genres, Length: 1172, dtype: int64"
       ]
      },
      "execution_count": 28,
@@ -1941,18 +1941,18 @@
     {
      "data": {
       "text/plain": [
-       "Drama                    6998\n",
-       "Comedy                   2471\n",
-       "Horror                   1446\n",
-       "Thriller                 1063\n",
-       "Comedy,Drama              967\n",
-       "                         ... \n",
-       "Drama,Musical,Sci-Fi        1\n",
-       "Action,Crime,Family         1\n",
-       "Action,Horror,Western       1\n",
-       "Adult,Biography,Drama       1\n",
-       "Crime,Fantasy,Sci-Fi        1\n",
-       "Name: genres, Length: 625, dtype: int64"
+       "Drama                         33767\n",
+       "Comedy                        12603\n",
+       "Comedy,Drama                   6125\n",
+       "Horror                         5332\n",
+       "Drama,Romance                  4128\n",
+       "                              ...  \n",
+       "Action,Crime,Music                1\n",
+       "Animation,Music,Romance           1\n",
+       "Action,Animation,Game-Show        1\n",
+       "Family,Musical,Sport              1\n",
+       "Action,Crime,Short                1\n",
+       "Name: genres, Length: 954, dtype: int64"
       ]
      },
      "execution_count": 30,
@@ -1996,21 +1996,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 16612 entries, 61116 to 9806063\n",
+      "Int64Index: 81627 entries, 34803 to 9806063\n",
       "Data columns (total 9 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   tconst          16612 non-null  object \n",
-      " 1   titleType       16612 non-null  object \n",
-      " 2   primaryTitle    16612 non-null  object \n",
-      " 3   originalTitle   16612 non-null  object \n",
-      " 4   isAdult         16612 non-null  object \n",
-      " 5   startYear       16612 non-null  float64\n",
+      " 0   tconst          81627 non-null  object \n",
+      " 1   titleType       81627 non-null  object \n",
+      " 2   primaryTitle    81627 non-null  object \n",
+      " 3   originalTitle   81627 non-null  object \n",
+      " 4   isAdult         81627 non-null  object \n",
+      " 5   startYear       81627 non-null  float64\n",
       " 6   endYear         0 non-null      object \n",
-      " 7   runtimeMinutes  16612 non-null  object \n",
-      " 8   genres          16612 non-null  object \n",
+      " 7   runtimeMinutes  81627 non-null  object \n",
+      " 8   genres          81627 non-null  object \n",
       "dtypes: float64(1), object(8)\n",
-      "memory usage: 1.3+ MB\n"
+      "memory usage: 6.2+ MB\n"
      ]
     }
    ],
