--- a/Eploratory Data Analysis.ipynb
+++ b/Eploratory Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ca260729",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,26 +303,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d1d71fc2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False    2023\n",
-       "True      544\n",
-       "Name: budget, dtype: int64"
+       "False    1931\n",
+       "True      636\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Creating filter for revenue then filering dataframe to get values\n",
-    "filter = result['budget'] > 0 \n",
+    "filter = (result['budget'] > 0) | (result['revenue'] > 0)\n",
     "filter.value_counts()\n",
     "#result_filtered = result[filter]\n",
     "#print(f'There are a total of {result_filtered.shape[0]} movies that had valid financial for budget')"
@@ -348,11 +348,11 @@
     }
    ],
    "source": [
-    "#Creating filter for revenue then filering dataframe to get values\n",
-    "filter = result['revenue'] > 0 \n",
-    "filter.value_counts()\n",
-    "#result_filtered = result[filter]\n",
-    "#print(f'There are a total of {result_filtered.shape[0]} movies that had valid financial for budget')"
+    "# #Creating filter for revenue then filering dataframe to get values\n",
+    "# filter = result['revenue'] > 0 \n",
+    "# filter.value_counts()\n",
+    "# #result_filtered = result[filter]\n",
+    "# #print(f'There are a total of {result_filtered.shape[0]} movies that had valid financial for budget')"
    ]
   },
   {
@@ -365,8 +365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1a26cc7c",
+   "execution_count": 9,
+   "id": "af01ec6a",
    "metadata": {},
    "outputs": [
     {
@@ -382,13 +382,45 @@
        "Name: certification, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result['certification'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1a26cc7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R        231\n",
+       "PG-13    131\n",
+       "PG        35\n",
+       "NR        17\n",
+       "G         15\n",
+       "Name: certification, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter to dataframe then value_counts()\n",
+    "# Resource - \n",
+    "# https://stackoverflow.com/questions/63529322/how-to-create-new-dataframe-by-filtering-a-column-of-another-dataframe\n",
+    "\n",
+    "df_new = result[(result['budget'] > 0) | (result['revenue'] > 0)]\n",
+    "\n",
+    "df_new['certification'].value_counts()"
    ]
   },
   {
@@ -401,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "ea168ae5",
    "metadata": {},
    "outputs": [
@@ -409,25 +441,26 @@
      "data": {
       "text/plain": [
        "certification\n",
-       "G          70418856\n",
-       "NC-17             0\n",
-       "NR          2232978\n",
-       "PG         61466954\n",
-       "PG-13      71465436\n",
-       "R          16137832\n",
-       "Unrated           0\n",
+       "G        117364760\n",
+       "NR         9588674\n",
+       "PG       110640517\n",
+       "PG-13     99287858\n",
+       "R         32485246\n",
        "Name: revenue, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Using group \n",
-    "revenue_per_certification = result.groupby('certification')['revenue'].mean()\n",
-    "revenue_per_certification.astype(int)"
+    "df_new.groupby('certification')['revenue'].mean().astype(int)\n",
+    "\n",
+    "# revenue_per_certification = result.groupby('certification')['revenue'].mean()\n",
+    "# revenue_per_certification.astype(int)\n",
+    "\n"
    ]
   },
   {
@@ -440,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "89b18695",
    "metadata": {},
    "outputs": [
@@ -448,24 +481,21 @@
      "data": {
       "text/plain": [
        "certification\n",
-       "G          22880000\n",
-       "NC-17             0\n",
-       "NR          1467672\n",
-       "PG         24904718\n",
-       "PG-13      30945922\n",
-       "R           9684525\n",
-       "Unrated           0\n",
+       "G        38133333\n",
+       "NR        6302358\n",
+       "PG       44828492\n",
+       "PG-13    42993571\n",
+       "R        19494824\n",
        "Name: budget, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "budget_per_certification = result.groupby('certification')['budget'].mean()\n",
-    "budget_per_certification.astype(int)"
+    "df_new.groupby('certification')['budget'].mean().astype(int)\n"
    ]
   },
   {
