Added notebook part 3 and uploaded dataframes to database

--- a/IMDB Movies database(Part 1).ipynb
+++ b/IMDB Movies database(Part 1).ipynb
@@ -5,7 +5,8 @@
    "id": "fda96a1e",
    "metadata": {},
    "source": [
-    "# Oscar Dominguez"
+    "# Oscar Dominguez\n",
+    "# IMDB Movies database(Part 1)"
    ]
   },
   {
