--- a/IMDB Movies database(Part 2).ipynb
+++ b/IMDB Movies database(Part 2).ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "603eb300",
+   "metadata": {},
+   "source": [
+    "# Oscar Dominguez\n",
+    "# IMDB Movies database(Part 2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "620d26bb",
